                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 31-05-2006 fixed: folder.jpg should now work in My Pictures.
 - 31-05-2006 fixed: Add Network location didn't update the mediasources list.
 - 31-05-2006 changed: Cleaned up a few unnecessary settings.
 - 31-05-2006 fixed: [ 1496367 ] playselected pos in playlist.
 - 31-05-2006 changed: New my programs system is now the default.  Removed old code.
 - 31-05-2006 changed: Cleaned up the animation code a little.
 - 30-05-2006 fixed: Url sharename was not cloned (causing smb errors)
 - 29-05-2006 fixed: Startup windows based on the old system weren't working when the startup window was set to Home.
 - 29-05-2006 added: [ 1479495 ] httpapi: optional boolean para to GetThumbFilename, if true returns temp store filename otherwise returns permanent filename (default: false)
 - 29-05-2006 fixed: httpapi: GetCurrentlyPlaying now includes File Size field
 - 29-05-2006 fixed: no switch to thumb control after album lookup
 - 29-05-2006 changed: context menu entry "Rip CD" is only shown inside the cdda directory listing
 - 29-05-2006 updated: Norwegian language file (Thnx to vnm)
 - 29-05-2006 updated: Swedish language file (Thnx to blittan)
 - 29-05-2006 updated: Portuguese (Brazil) language file (Thnx to mvbm)
 - 29-05-2006 updated: Polish language file (Thnx to napek)
 - 29-05-2005 updated: Hungarian language file (Thnx to bali001)
 - 29-05-2006 fixed: highlighted playing item in filelists could be wrong
 - 29-05-2006 fixed: Crash when 2 different file browsers are on screen.
 - 29-05-2006 fixed: [ 1496037 ] USA/English Weather Units are incorrect